# ice-legacy

./: .clang-format  .gitignore  CMakeLists.txt  build.bat  ice-config.cmake  license.md  make.bat  makefile  readme.md
include/: filesystem  optional  variant
include/ice/: app.h  application.h  base.h  bitmask.h  color.h  crc.h  crypt.h  date.h  exception.h  giant.h  hash.h  hex.h  json.h  json_type.h  log.h  sha.h  stack.h  traits.h  uuid.h
src/: app.cpp  application.cpp  color.cpp  crc.cpp  crypt.cpp  exception.cpp  hash.cpp  log.cpp  sha.cpp  stack.cpp  stack_gcc.h  stack_win32.h  uuid.cpp
src/crypt/: blowfish.c  blowfish.h
